Fix alignment

--- a/main_app/static/styles/home.css
+++ b/main_app/static/styles/home.css
@@ -113,6 +113,10 @@
 
 
 @media screen and (min-width: 750px) {
+    .home-page {
+        align-items: center;
+    }
+
     .mobile {
         display: none;
     }
